site/assets/css/flexi_shared.css
/* ... */
#flexicontent form span.fcfield_textval {
	cursor: text;
	padding: 4px;
	white-space: pre-wrap;
	word-wrap: break-word;
	min-width: 220px;
	width: 50%;
	max-width: 600px;
}
#flexicontent form select.fcfield_selectval,
#flexicontent form input.fcfield_textval {
	height: 26px;
	line-height: 26px;
	overflow: auto;
	vertical-align: top;
	min-width: 220px;
	width: 50%;
	max-width: 600px;
}
#flexicontent form select.fcfield_selectval {
	padding: 4px 0 2px 4px;
}
#flexicontent form select.fcfield_selectmulval,
#flexicontent form textarea.fcfield_textareaval {
	line-height: 1em;
	overflow: auto;
	padding: 4px 0 2px 4px;
}
#flexicontent form select.fcfield_selectval.inlineval,
#flexicontent form select.fcfield_selectmulval.inlineval,
#flexicontent form input.fcfield_textval.inlineval {
	margin-left: 0px;
	margin-right: 0px;
	min-width: 0;
	width: auto;
}
#flexicontent form .admintable input.fcfield_textval {
	height: 22px;
	line-height: 100%;
	margin-top: 0px;
	margin-bottom: 0px;
}
table.fc-form-tbl.keytop td.key {
	vertical-align: top;
}
table.fc-form-tbl td {
	vertical-align: middle;
	padding: 4px 24px 4px 0px;
}
table.fc-form-tbl td.key {
	vertical-align: top;
	text-align: right;
	padding: 4px 0px;
	max-width: 140px;
	min-width: 114px;
}
table.fc-form-tbl.fcfullwidth {
	width: 100% !important;
}
table.fc-form-tbl.fcfullwidth td.key {
	width: 114px;
	padding-right: 8px;
}
table.fc-form-tbl.fcfullwidth td.key .label {
	white-space: unset;
}
table.fc-form-tbl td.key label.label {
	display: inline-block;
	padding: 8px 4%;
	width: 82%;
	margin: 0px 5%;
	white-space: normal;
}
table.fc-form-tbl.fcinner td.key label.label {
	padding: 2px 4px;
}
table.fc-form-tbl fieldset {
	margin: 0px;
	padding: 0px;
	border-width: 0px;
}
table.fc-form-tbl td.data {
	vertical-align: top;
}
table.fc-form-tbl td.key > .fc-prop-lbl {
	margin: 0 8px 0;
}
#fileman_tabset {
	margin-bottom: 32px;
}
#fileman_tabset div.tabbertab {
	padding: 8px 16px 16px 16px;
}
.fc-sys-upload-limit-box img,
.fc-php-upload-limit-box img {
	vertical-align: top;
	float: none;
	border: none;
	margin: 0;
}
.fc-fileman-upload-icon:before {
	color: darkorange !important;
}
#multiple_uploader {
	padding: 0px;
	margin: 6px 0 0 0;
	width: auto;
}
#multiple_uploader.fc_file_uploading {
	width: auto;
	overflow: visible;
}
#multiple_uploader.fc_file_uploading .plupload_container.fc_uploader_hide_preview span.plupload_img_preview {
	display: none !important;
}
#multiple_uploader.fc_file_uploading .plupload_container:not(.fc_uploader_hide_preview) ul.plupload_filelist > li.fc_uploader_is_image {
	height: 64px;
}
#multiple_uploader.fc_file_uploading .plupload_container {
	padding: 0;
	min-width: 500px;
}
#multiple_uploader.fc_file_uploading .plupload_container input {
	height: 2.4em;
	padding: 0.5em;
	box-sizing: border-box;
	width: 98%;
	margin: 1px 1%;
}
#multiple_uploader.fc_file_uploading .plupload_button {
	padding: 3px 4px 3px 24px;
}
#multiple_uploader.fc_file_uploading ul.plupload_filelist_content li.plupload_file {
	padding: 0;
}
#multiple_uploader.fc_file_uploading .plupload_scroll ul.plupload_filelist {
	min-height: 100px;
}
#multiple_uploader.fc_file_uploading .plupload_scroll ul.plupload_filelist > li {
	padding: 6px 8px;
}
#multiple_uploader.fc_file_uploading .plupload_scroll ul.plupload_filelist .plupload_droptext {
	line-height: 60px;
}
#multiple_uploader.fc_file_uploading .plupload_scroll ul.plupload_filelist .plupload_file_name {
	display: inline-block;
	width: 200px;
	overflow: visible;
}
#multiple_uploader.fc_file_uploading .plupload_scroll ul.plupload_filelist .plupload_file_name > span:first-of-type {
	display: inline-block;
	width: 200px;
	white-space: normal;
	word-wrap: break-word;
}
#multiple_uploader.fc_file_uploading .plupload_scroll ul.plupload_filelist .btn.fc_img_preview_btn:before {
	font-size: 24px;
}
#multiple_uploader.fc_file_uploading .plupload_scroll ul.plupload_filelist .btn.fc_img_preview_btn {
	width: unset;
	margin: 0px 16px 0px 12px;
	padding: 8px 6px;
	vertical-align: top;
}
#multiple_uploader.fc_file_uploading .plupload_scroll ul.plupload_filelist span.plupload_img_preview {
	display: inline-block;
	vertical-align: top;
	margin: 0;
	padding: 0;
}
#multiple_uploader.fc_file_uploading .plupload_scroll ul.plupload_filelist span.plupload_img_preview > img {
	position: relative;
	max-height: 64px;
	max-width: 140px;
	transition: all 0.5s ease-in-out;
}
#multiple_uploader.fc_file_uploading .plupload_scroll ul.plupload_filelist > li.fc_uploader_zooming span.plupload_img_preview {
	display: inline-block !important;
}
#multiple_uploader.fc_file_uploading .plupload_scroll ul.plupload_filelist > li.fc_uploader_zooming span.plupload_img_preview > img {
	top: 25% !important;
	position: fixed !important;
	max-width: unset !important;
	box-shadow: 0px 0px 30px 0px rgba(0,0,0,0.75) !important;
	z-index: 2050 !important;
}
#multiple_uploader.fc_file_uploading .plupload_scroll ul.plupload_filelist > li.fc_uploader_zooming.fc_uploader_zoomed span.plupload_img_preview > img {
	max-height: 50% !important;
}
table.fc_uploader_header_tbl {
	border-collapse: collapse;
}
table.fc_uploader_header_tbl td {
	padding: 1px 24px 1px 0px;
}
table.fc_uploader_header_tbl td:last-child {
	padding: 1px 0px 1px 0px;
}
.fc_set_file_assignment {
	max-width: 240px;
	word-wrap: break-word;
}
@media (max-width: 960px) {
	.fc_hidden_960 {
		display: none;
	}
	.fc_set_file_assignment {
		max-width: 200px;
	}
}
@media (max-width: 720px) {
	#multiple_uploader.fc_file_uploading .plupload_file_size,
	#multiple_uploader.fc_file_uploading .plupload_file_status,
	#multiple_uploader.fc_file_uploading .plupload_progress {
		width: 60px;
	}
}
@media (max-width: 640px) {
	.fc_hidden_640 {
		display: none;
	}
	.fc_set_file_assignment {
		max-width: 180px;
	}
	#multiple_uploader.fc_file_uploading .plupload_container {
		min-width: 400px;
	}
	#multiple_uploader.fc_file_uploading .fc_img_preview_btn {
		display: none !important;
	}
}
/* ... */

